Extract interface